Toggle on utility, color variable map, reorder responsive - Add toggle on utilities to enable or disable - Add color variable map - Reorder responsive to prevent override on wrong breakpoints - Reorder order, z-index and width/height generators

--- a/packages/create-mufferplate/templates/template-single-custom/src/css/abstracts/_variables.scss
+++ b/packages/create-mufferplate/templates/template-single-custom/src/css/abstracts/_variables.scss
@@ -8,9 +8,4 @@ $color_map: (
 );
 
 
-$primary: map.get($color_map, primary);
-$secondary: map.get($color_map, secondary);
-$light: map.get($color_map, light);
-$dark: map.get($color_map, dark);
-
 $final_list: ();
