--- a/packages/create-mufferplate/templates/template-single-custom/src/css/base/_base.scss
+++ b/packages/create-mufferplate/templates/template-single-custom/src/css/base/_base.scss
@@ -19,3 +19,9 @@ ul{
 *:focus {
   outline: none;
 }
+
+:root{
+  @each $key, $color in $color-map{
+    --color-#{$key}: #{$color};
+  }
+}
