--- a/packages/create-mufferplate/templates/template-single-custom/src/css/base/_mobile.scss
+++ b/packages/create-mufferplate/templates/template-single-custom/src/css/base/_mobile.scss
@@ -1,44 +1,21 @@
-.header_sm,
-.mobileMenu {
-  display: none;
-}
-
 @include max_responsive(md) {
-  .header_lg {
-    display: none;
-  }
-
   .header_sm {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: $primary;
     padding: 30px 0;
     z-index: 5;
 
     .menuButton {
-      display: flex;
       width: 30px;
       height: 20px;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: stretch;
-      position: relative;
       margin-left: auto;
       span {
         @include get_transition();
-        width: 100%;
         height: 3px;
         background-color: #fff;
         border-radius: 2px;
 
         &:nth-child(2) {
-          position: absolute;
           left: 0;
           top: calc(50% - 1.5px);
-          width: 100%;
         }
       }
       &.show {
@@ -57,28 +34,18 @@
         }
       }
     }
-    .logo {
-      .img {
-        @include mask-parameters('../img/svg/logo.svg');
-        background-color: #fff;
-        width: 100%;
-        height: 30px;
-        display: block;
-      }
-    }
   }
 
   .mobileMenu {
-    @include get_transition((left:0.4s, opacity:0.4s));
-    position: fixed;
+    @include get_transition(
+      (
+        left: 0.4s,
+        opacity: 0.4s,
+      )
+    );
     left: 100vw;
-    width: 100vw;
-    height: 100vh;
-    z-index: 4;
     top: 0;
     opacity: 0;
-    background-color: $primary;
-    display: block;
     &.show {
       left: 0;
       opacity: 1;
@@ -86,27 +53,29 @@
   }
 }
 
-nav[id^=nav-mobile]{
-  display: flex;
-  flex-direction: column;
+nav[id^='nav-mobile'] {
   padding-left: 30px;
   gap: 15px;
-  a{
+  a {
     color: #fff;
   }
 }
 
-nav[id^=nav-mobile]:not(#nav-mobile-1){
+nav[id^='nav-mobile']:not(#nav-mobile-1) {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
   transform: translateX(100%);
-  background-color: $primary;
-  @include get_transition((transform: .4s));
+  background-color: var(--color-primary);
+  @include get_transition(
+    (
+      transform: 0.4s,
+    )
+  );
 }
 
-nav[id^=nav-mobile]:not(#nav-mobile-1).show{
+nav[id^='nav-mobile']:not(#nav-mobile-1).show {
   transform: translateX(0);
 }
