--- a/packages/create-mufferplate/templates/template-single-custom/src/css/custom_utilities/_functions.scss
+++ b/packages/create-mufferplate/templates/template-single-custom/src/css/custom_utilities/_functions.scss
@@ -23,3 +23,30 @@
   @function breakpoint-infix($name, $breakpoints: $grid-breakpoints) {
     @return if(breakpoint-min($name, $breakpoints) == null, "", "-#{$name}");
   }
+
+
+  @function mapReverse ($map) {
+    $result: null;
+
+    @if type-of($map) == "map" {
+        $keys: map-keys($map);
+        $map-reversed: ();
+        
+        @for $i from length($keys) through 1 {
+            $map-reversed: map-merge(
+                $map-reversed,
+                (nth($keys, $i): map-get($map, nth($keys, $i)))
+            );
+        }
+
+        @if type-of($map-reversed) == "map" {
+            $result: $map-reversed;
+        } @else {
+            @warn 'There was an error reversing the order of "#{$map}"';
+        }
+    } @else {
+        @warn '"#{$map}" is not a valid map';
+    }
+
+    @return $result;
+}
