--- a/packages/create-mufferplate/templates/template-single-custom/src/css/custom_utilities/_initials.scss
+++ b/packages/create-mufferplate/templates/template-single-custom/src/css/custom_utilities/_initials.scss
@@ -16,16 +16,18 @@
 }
 
 @import '../../../node_modules/pers-sign/css/module';
-.after-absolute {
+.has-absolute {
   position: relative;
-  &::after {
+}
+
+.after-absolute{
+  &::after{
     @extend %pseudo-absolute;
   }
 }
 
-.before-absolute {
-  position: relative;
-  &::before {
+.before-absolute{
+  &::before{
     @extend %pseudo-absolute;
   }
 }
